@startuml

title __EXPERIMENTS's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.experiments {
      enum BSType {
      }
    }
  }
  

  package  {
    class IterativeBubbleSort {
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.loops {
        class IterativeBubbleSort {
        }
      }
    }
  }
  

  package  {
    package bubble {
      class IterativeBubbleSort {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      class Main {
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.loops {
        class RecursiveBubbleSort {
        }
      }
    }
  }
  

  package  {
    package bubble {
      class RecursiveBubbleSort {
      }
    }
  }
  

  package  {
    class RecursiveBubbleSort {
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        class ResultBS {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        class ResultBSFileWriter {
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        interface ResultBSWriter {
        }
      }
    }
  }
  

  ResultBS o-- BSType : bsType
  ResultBSFileWriter -up-|> ResultBSWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
